CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0048 NEW)

PROJECT(cmake-doxygen VERSION 0.0.1)

INCLUDE(CMakePackageConfigHelpers)
INCLUDE(GNUInstallDirs)

SET(PROJECT_CONFIG_PREFIX
	"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config")

WRITE_BASIC_PACKAGE_VERSION_FILE("${PROJECT_CONFIG_PREFIX}-version.cmake"
VERSION
	${PROJECT_VERSION}
COMPATIBILITY
	SameMajorVersion)

INSTALL(FILES
	"${PROJECT_CONFIG_PREFIX}-version.cmake"
	"${PROJECT_CONFIG_PREFIX}.cmake"
DESTINATION
	"${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}-${PROJECT_VERSION}"
COMPONENT
	Devel)

CONFIGURE_PACKAGE_CONFIG_FILE("cmake/${PROJECT_NAME}-config.cmake.in"
	"${PROJECT_CONFIG_PREFIX}.cmake"
INSTALL_DESTINATION
	"${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}-${PROJECT_VERSION}")
